# cmake_tutorial

./: .gitignore  CMakeLists.txt  config.h.in  main.cc  mysqrt.cc
mymath/: .gitignore  CMakeLists.txt  maketable.cc  mymath.h  mysqrt.cc
